frontend/src/components/organisms/PomodoroTimer.scss
.pomodoro-container {
  max-width: 400px;
  margin-bottom: 20px;
  margin: auto;
  margin-top: 30px;
}

.pomodoro-container .card-panel {
  padding-bottom: 50px;
}

.pomodoroCircle {
  transition: stroke-dashoffset 0.35s;
  transform: rotate(-90deg);
  transform-origin: 50% 50%;
}

.circle-container {
  position: relative;
  width: 300px;
  height: 380px;
  margin: 0 auto;
  display: block;
}
.circle-base {
  fill: none;
  stroke: #b6b6b6;
  stroke-width: 4px;
}

.circle-progress {
  fill: none;
  stroke: #2196f3;
  stroke-width: 4px;
  transition: stroke-dashoffset 0.7s;
}

.circle-pointer {
  fill: #fff;
  stroke: #2196f3;
  stroke-width: 2px;
}

.circle-countdown {
  position: absolute;
  left: 66px;
  top: 140px;
}

.circle-controls {
  position: absolute;
  width: 100%;
  left: 0px;
  top: 330px;
}

.circle-controls button {
  margin-right: 3px;
}

.progress-bullets {
  padding-top: 30px;
}

